ThemeChooser: update UI
- Use animated FAB to apply themes instead of animated button
- Auto-Check all components when user opens a theme preview (Dave request)
- Add banner to navigation drawer (by Dave and Asher)
- Vibrant color for theme cards (from default wallpaper) with caching (by Danny)
- Update toolbar, FAB and checkboxes color to match wallpaper vibrant color
- AVD sound preview

Change-Id: I7f4140997fea074cf6cccdc6e580cc2bbe4cf1a8
Signed-off-by: jrizzoli <joey@cyanogenmoditalia.it>

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:textColorPrimary">@color/primary_text_color</item>
         <item name="android:actionMenuTextColor">@android:color/white</item>
         <item name="android:actionOverflowButtonStyle">@style/ActionBarOverflow</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="ActionBarOverflow" parent="@android:style/Widget.Material.Light.ActionButton.Overflow">
@@ -35,6 +36,7 @@
         <item name="android:windowActionBarOverlay">false</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <!-- When this style was added, android:toolbarStyle was private. Therefore, this style
@@ -49,4 +51,5 @@
            parent="@android:style/TextAppearance.Material.Widget.ActionBar.Title">
         <item name="android:textColor">@color/actionbar_text_color</item>
     </style>
+
 </resources>
